Fixed alignment of certain elements

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -369,3 +369,8 @@ button i
 {
     width: 60%;
 }
+
+#review-competencies-button
+{
+    padding-left: 0;
+}
